infrastructure/base/layer0/monitoring/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.cluster.arpa`)
      kind: Rule
      services:
        - name: grafana
          namespace: monitoring-system
          port: 80
  tls:
    secretName: traefik-tls
